<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ciudades"
    android:orientation="vertical"
    android:background="@color/purple_500">
    <TextView
        android:id="@+id/tBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_elegir_ciudad"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAlignment="center">
    </TextView>

    <Button
        android:id="@+id/bJerez"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_jerez" />
    <Button
        android:id="@+id/bSevilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_sevilla" />
    <Button
        android:id="@+id/bPuerto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_puerto" />
    <Button
        android:id="@+id/bTarifa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_tarifa" />


</LinearLayout>